Update navbar styles Added responsive files and their links in HTML

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>خرید بیمه | بیمه سینا ۶۵۶۹</title>
+    <meta name="viewport" content="width=device-width, initial-scale=2">
+    <link rel="stylesheet" media='screen and (max-width: 576px)' href="col.css">
+    <link rel="stylesheet" media='screen and (min-width: 577px) and (max-width: 768px)' href="sm.css">
+    <link rel="stylesheet" media='screen and (min-width: 769px) and (max-width: 992px)' href="md.css">
+    <link rel="stylesheet" media='screen and (min-width: 993px) and (max-width: 1170px)' href="md.css">
+    <link rel="stylesheet" media='screen and (min-width: 1171px)' href="xl.css">
     <script src="https://kit.fontawesome.com/37fa0be6a2.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="Images/favicon.jpg">
     <!-- Blaze CSS (CDN) -->
