Added Bootstrap and modified folders

--- a/index.html
+++ b/index.html
@@ -6,28 +6,30 @@
     <!-- Font Awesome script -->
     <script src="https://kit.fontawesome.com/37fa0be6a2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-    <script src="Script.js"></script>
-    <link rel="icon" type="image/png" href="Images/favicon.jpg">
+    <link rel="stylesheet" href="css/reset.css">
+    <script src="script.js"></script>
+    <link rel="icon" type="image/png" href="images/favicon.jpg">
     <!-- Blaze CSS (CDN) -->
     <link rel="stylesheet" href="https://unpkg.com/blaze-slider@latest/dist/blaze.css">
     <!-- Responsive Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" media='screen and (max-width: 576px)' href="col.css">
-    <link rel="stylesheet" media='screen and (min-width: 577px) and (max-width: 768px)' href="sm.css">
-    <link rel="stylesheet" media='screen and (min-width: 769px) and (max-width: 992px)' href="md.css">
-    <link rel="stylesheet" media='screen and (min-width: 993px) and (max-width: 1170px)' href="md.css">
-    <link rel="stylesheet" media='screen and (min-width: 1171px)' href="xl.css">
-</head>
+    <link rel="stylesheet" media='screen and (max-width: 576px)' href="css/col.css">
+    <link rel="stylesheet" media='screen and (min-width: 577px) and (max-width: 768px)' href="css/sm.css">
+    <link rel="stylesheet" media='screen and (min-width: 769px) and (max-width: 992px)' href="css/md.css">
+    <link rel="stylesheet" media='screen and (min-width: 993px) and (max-width: 1170px)' href="css/md.css">
+    <link rel="stylesheet" media='screen and (min-width: 1171px)' href="css/xl.css">
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+</head> 
 <header id="top">
-    <div class="container">
-        <div class="topBanner">
-            <a href="tel:+989184449208"><img src="Images/topBanner.png" height="76" width="1890" class="topBanner"
+    <div class="ContainerDiv">
+        <div>
+            <a href="tel:+989184449208"><img src="images/topBanner.png" height="76" width="1890" class="topBanner"
                                              title="تخفیف شگفت انگیز" alt="DiscountBanner"/></a>
         </div>
         <div class="topHeader">
             <div class="topLogo">
-                <a href="index.html" class="logo"><img src="Images/logo.png" height="33" width="275"
+                <a href="index.html" class="logo"><img src="images/logo.png" height="33" width="275"
                                                        alt="Insurance Logo"
                                                        title="Sina Insurance"/>
                 </a>
@@ -175,7 +177,7 @@
         <div class="blaze-track-container">
             <div class="blaze-track">
                 <div class="blaze-slide hero-slide">
-                    <img src="Images/MainSlider/1%20Edited.jpg" alt="بیمه خودرو">
+                    <img src="images/MainSlider/1%20Edited.jpg" alt="بیمه خودرو">
                     <div class="hero-content">
                         <h1>با آرامش خاطر بیمه بخرید</h1>
                         <p>نمایندگی ۶۵۶۹ – بیمه سینا</p>
@@ -183,7 +185,7 @@
                     </div>
                 </div>
                 <div class="blaze-slide hero-slide">
-                    <img src="Images/MainSlider/2%20Edited.jpg" alt="بیمه مسئولیت">
+                    <img src="images/MainSlider/2%20Edited.jpg" alt="بیمه مسئولیت">
                     <div class="hero-content">
                         <h1>پوشش کامل بیمه مسئولیت</h1>
                         <p>امنیت کسب‌وکار شما با ما</p>
@@ -191,7 +193,7 @@
                     </div>
                 </div>
                 <div class="blaze-slide hero-slide">
-                    <img src="Images/MainSlider/3%20Edited.jpg" alt="بیمه عمر">
+                    <img src="images/MainSlider/3%20Edited.jpg" alt="بیمه عمر">
                     <div class="hero-content">
                         <h1>بیمه عمر</h1>
                         <p>آینده‌ای مطمئن برای خانواده‌تان</p>
@@ -199,7 +201,7 @@
                     </div>
                 </div>
                 <div class="blaze-slide hero-slide">
-                    <img src="Images/MainSlider/4Edited.jpg" alt="بیمه">
+                    <img src="images/MainSlider/4Edited.jpg" alt="بیمه">
                     <div class="hero-content">
                         <h1>بیمه یک نیاز نیست!</h1>
                         <p>یک ضرورته!</p>
@@ -207,7 +209,7 @@
                     </div>
                 </div>
                 <div class="blaze-slide hero-slide">
-                    <img src="Images/MainSlider/5Edited.jpg" alt="بیمه درمان">
+                    <img src="images/MainSlider/5Edited.jpg" alt="بیمه درمان">
                     <div class="hero-content">
                         <h1>هزینه های درمان زیاده؟</h1>
                         <p>خیالت با بیمه راحته!</p>
@@ -215,7 +217,7 @@
                     </div>
                 </div>
                 <div class="blaze-slide hero-slide">
-                    <img src="Images/MainSlider/6.jpg" alt="بیمه">
+                    <img src="images/MainSlider/6.jpg" alt="بیمه">
                     <div class="hero-content">
                         <h1>بیمه عمر</h1>
                         <p>آینده‌ای مطمئن برای خانواده‌تان</p>
@@ -235,34 +237,34 @@
     <div class="container">
         <div class="box">
             <div class="icon">
-                <img src="Images/InsuranceTypes/life.png" alt="LifeInsuranceIcon"/></div>
+                <img src="images/InsuranceTypes/life.png" alt="LifeInsuranceIcon"/></div>
             <h3>بیمه عمر</h3>
         </div>
         <div class="box">
             <div class="icon">
 
-                <img src="Images/InsuranceTypes/car.png" alt="CarInsuranceIcon"/></div>
+                <img src="images/InsuranceTypes/car.png" alt="CarInsuranceIcon"/></div>
             <h3>بیمه ماشین</h3>
         </div>
         <div class="box">
             <div class="icon">
-                <img src="Images/InsuranceTypes/fire.png" alt="FireInsuranceIcon"/></div>
+                <img src="images/InsuranceTypes/fire.png" alt="FireInsuranceIcon"/></div>
             <h3>بیمه آتش سوزی</h3>
         </div>
         <div class="box">
             <div class="icon">
-                <img src="Images/InsuranceTypes/health.png" alt="MedicalInsuranceIcon"/></div>
+                <img src="images/InsuranceTypes/health.png" alt="MedicalInsuranceIcon"/></div>
             <h3>بیمه پزشکان</h3>
         </div>
         <div class="box">
             <div class="icon">
-                <img src="Images/InsuranceTypes/travel.png" alt="TravelInsuranceIcon"/></div>
+                <img src="images/InsuranceTypes/travel.png" alt="TravelInsuranceIcon"/></div>
             <h3>بیمه سفر</h3>
         </div>
         <div class="box">
             <div class="icon">
 
-                <img src="Images/InsuranceTypes/smartphone.png" alt="PhoneInsuranceIcon"/></div>
+                <img src="images/InsuranceTypes/smartphone.png" alt="PhoneInsuranceIcon"/></div>
             <h3>بیمه تلفن</h3>
         </div>
     </div>
@@ -275,19 +277,19 @@
     <i class="fa-solid fa-arrow-up"></i>
 </a>
 <!-- ===== Blaze slider (copy this into body) ===== -->
-<div class="orgText">👇 شرکت‌هایی که به ما اعتماد کرده‌اند 👇</div>
+<div class="orgText">شرکت‌هایی که به ما اعتماد کرده‌اند 👇</div>
 <div class="blaze-slider my-blaze">
     <div class="blaze-container">
         <div class="blaze-track-container">
             <div class="blaze-track">
-                <div class="blaze-slide"><img src="Images/OrganisationSlider/1.png" alt="slide 1"></div>
-                <div class="blaze-slide"><img src="Images/OrganisationSlider/2.png" alt="slide 2"></div>
-                <div class="blaze-slide"><img src="Images/OrganisationSlider/3.png" alt="slide 3"></div>
-                <div class="blaze-slide"><img src="Images/OrganisationSlider/4.png" alt="slide 4"></div>
-                <div class="blaze-slide"><img src="Images/OrganisationSlider/5.png" alt="slide 5"></div>
-                <div class="blaze-slide"><img src="Images/OrganisationSlider/6.png" alt="slide 6"></div>
-                <div class="blaze-slide"><img src="Images/OrganisationSlider/7.png" alt="slide 7"></div>
-                <div class="blaze-slide"><img src="Images/OrganisationSlider/8.png" alt="slide 8"></div>
+                <div class="blaze-slide"><img src="images/OrganisationSlider/1.png" alt="slide 1"></div>
+                <div class="blaze-slide"><img src="images/OrganisationSlider/2.png" alt="slide 2"></div>
+                <div class="blaze-slide"><img src="images/OrganisationSlider/3.png" alt="slide 3"></div>
+                <div class="blaze-slide"><img src="images/OrganisationSlider/4.png" alt="slide 4"></div>
+                <div class="blaze-slide"><img src="images/OrganisationSlider/5.png" alt="slide 5"></div>
+                <div class="blaze-slide"><img src="images/OrganisationSlider/6.png" alt="slide 6"></div>
+                <div class="blaze-slide"><img src="images/OrganisationSlider/7.png" alt="slide 7"></div>
+                <div class="blaze-slide"><img src="images/OrganisationSlider/8.png" alt="slide 8"></div>
             </div>
         </div>
 
@@ -299,8 +301,11 @@
     </div>
 </div>
 <!-- ============================================ -->
+
 <!-- Blaze JS (CDN) -->
 <script src="https://unpkg.com/blaze-slider/dist/blaze-slider.min.js"></script>
+<!-- Bootstrap js-->
+<script src="js/bootstrap/bootstrap.min.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const heroSliderEl = document.querySelector('.hero-slider');
@@ -310,7 +315,6 @@
                 loop: true,               // اسلایدر بی‌نهایت بچرخه
                 autoplay: true,           // فعال‌سازی اتوپلی
                 autoplayInterval: 4000,   // هر ۴ ثانیه یکبار عوض بشه
-                autoplayPauseOnHover: false,  // وقتی موس روش هست توقف نکنه
                 enableArrows: true,       // فلش‌های راست و چپ
                 enablePagination: true    // نقطه‌های زیرش
             }
@@ -329,7 +333,6 @@
                 slideGap: '12px',
                 enableAutoplay: true,
                 autoplayInterval: 1500,
-                stopAutoplayOnInteraction: true,
                 enablePagination: true,
                 transitionDuration: 550
             },
