--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" media='screen and (min-width: 1171px)' href="css/xl.css">
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <script src="js/jquery-3.7.1.min.js"></script>
 </head> 
 <header id="top">
     <div class="ContainerDiv">
@@ -233,42 +234,83 @@
     </div>
 </div>
 <!-- Insurance Boxes Section -->
-<section class="insurance-boxes">
-    <div class="container">
-        <div class="box">
-            <div class="icon">
-                <img src="images/InsuranceTypes/life.png" alt="LifeInsuranceIcon"/></div>
-            <h3>بیمه عمر</h3>
+<div class="container insContStyle">
+    <div class="row g-3">
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+            <a href="#" class="text-decoration-none">
+            <div class="insBoxItem">
+                <img src="images/InsuranceTypes/3rd.png" alt="3rdPartyInsuranceIcon" class="icon"/>
+                بیمه شخص ثالث
+                <span class="insBoxDetails">«امنیت دیگران یعنی آرامش شما🚦»</span>
+            </div>
+            </a>
         </div>
-        <div class="box">
-            <div class="icon">
-
-                <img src="images/InsuranceTypes/car.png" alt="CarInsuranceIcon"/></div>
-            <h3>بیمه ماشین</h3>
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+            <a href="#" class="text-decoration-none">
+            <div class="insBoxItem">
+                <img src="images/InsuranceTypes/od.png" alt="odInsuranceIcon" class="icon"/>
+                بیمه بدنه
+                <span class="insBoxDetails">«از خراش تا تصادف آسوده باشید🚘»</span>
+            </div>
+            </a>
         </div>
-        <div class="box">
-            <div class="icon">
-                <img src="images/InsuranceTypes/fire.png" alt="FireInsuranceIcon"/></div>
-            <h3>بیمه آتش سوزی</h3>
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+            <a href="#" class="text-decoration-none">
+            <div class="insBoxItem">
+                <img src="images/InsuranceTypes/fire.png" alt="fireInsuranceIcon" class="icon"/>
+                بیمه آتش‌سوزی
+                <span class="insBoxDetails">«خانه‌ را از شعله‌ها نجات دهید🔥»</span>
+            </div>
+            </a>
         </div>
-        <div class="box">
-            <div class="icon">
-                <img src="images/InsuranceTypes/health.png" alt="MedicalInsuranceIcon"/></div>
-            <h3>بیمه پزشکان</h3>
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+            <a href="#" class="text-decoration-none">
+            <div class="insBoxItem">
+                <img src="images/InsuranceTypes/travel.png" alt="travelInsuranceIcon" class="icon"/>
+                بیمه حوادث
+                <span class="insBoxDetails">«زندگی پر از اتفاق است ⚡️»</span>
+            </div>
+            </a>
         </div>
-        <div class="box">
-            <div class="icon">
-                <img src="images/InsuranceTypes/travel.png" alt="TravelInsuranceIcon"/></div>
-            <h3>بیمه سفر</h3>
+        
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+            <a href="#" class="text-decoration-none">
+            <div class="insBoxItem">
+                <img src="images/InsuranceTypes/life.png" alt="lifeInsuranceIcon" class="icon"/>
+                بیمه مهندسی
+                <span class="insBoxDetails">«امنیت برای هر پیچ و مهره‌ای 🏗️»</span>
+            </div>
+            </a>
         </div>
-        <div class="box">
-            <div class="icon">
-
-                <img src="images/InsuranceTypes/smartphone.png" alt="PhoneInsuranceIcon"/></div>
-            <h3>بیمه تلفن</h3>
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+            <a href="#" class="text-decoration-none">
+                <div class="insBoxItem">
+                    <img src="images/InsuranceTypes/car.png" alt="carInsuranceIcon" class="icon"/>
+                    بیمه باربری
+                    <span class="insBoxDetails">«کالا در مسیر در امنیت کامل 🚛»</span>
+                </div>
+            </a>
+        </div>
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+            <a href="#" class="text-decoration-none">
+                <div class="insBoxItem">
+                    <img src="images/InsuranceTypes/life.png" alt="lifeInsuranceIcon" class="icon"/>
+                    بیمه عمر
+                    <span class="insBoxDetails">«برای آینده‌ای آرام 💙»</span>
+                </div>
+            </a>
+        </div>
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+            <a href="#" class="text-decoration-none">
+                <div class="insBoxItem">
+                    <img src="images/InsuranceTypes/smartphone.png" alt="smartphoneInsuranceIcon" class="icon"/>
+                    بیمه وسایل الکترونیک
+                    <span class="insBoxDetails">«ما مراقبش هستیم📱💻»</span>
+                </div>
+            </a>
         </div>
     </div>
-</section>
+</div>
 <a href="tel:+989184449208">
     <i class="fa-solid fa-mobile-vibrate VibratingPhone fixedCallBtn"
        title="Mobile Phone Number"></i>
